--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
 
     <meta charset=:"utf-8">
-    <titel>Samuel Cline | CIT230</titel>
+    <title>Samuel Cline | CIT230</title>
 
 </head>
 
