--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
 
 
 <head>
-
+<!--    the head holds information about the website-->
     <meta charset=:"utf-8">
     <title>Samuel Cline | CIT230</title>
 
 </head>
+<body>
+<!--The body holds the main content of a page-->
+<div id="wrapper">
+    <header>
+    Samuel Cline | CIT230
+    </header>
+
+
+    </div>
+
+
+</body>
 
 </html>
