Added Image, body, headers, title

--- a/index.html
+++ b/index.html
@@ -15,9 +15,31 @@
 <!--The body holds the main content of a page-->
 <div id="wrapper">
     <header>
-    Samuel Cline | CIT230
+        <img src="imgs/icon1.png">
+
+<!--             identifies's our Site-->
+
+        <div id="brand"> Samuel Cline | CIT230 | SamuelLCline.GitHub.io </div>
     </header>
 
+<div>test</div>
+
+    <nav>
+    <ul>
+        <li>
+            Home
+        </li>
+    </ul>
+    </nav>
+    <main>
+    <h1>
+    Samuel Cline
+    </h1>
+    </main>
+
+    <footer>
+        &copy; 2017 Samuel Cline
+    </footer>
 
     </div>
 
