--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="brand"> Samuel Cline | CIT230 | SamuelLCline.GitHub.io </div>
     </header>
 
-<div>test</div>
+<!--<div>test</div>-->
 
     <nav>
     <ul>
