added design page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     <nav>
     <ul>
         <li>
-            Home
+            <a href = "/index.html">Home</a>
+            <li>
+            <a href = "/html/design.html">Design</a>
+            </li>
+
         </li>
     </ul>
     </nav>
