added content to design.html

--- a/html/design.html
+++ b/html/design.html
@@ -29,7 +29,7 @@
      </nav>
   <main>
    <h1>Design - Analysis Assessment</h1>
-   <h2><!-- Add the example site name as a URL here (e.g. byui.edu) --></h2>
+   <h2><a href = "http://www.adidas.com">www.adidas.com</a><!-- Add the example site name as a URL here (e.g. byui.edu) --></h2>
    <h2>Design Principles</h2>
    <!-- ***********************************************
 Each design principle needs three items:
@@ -40,18 +40,21 @@ Each design principle needs three items:
 
    <h3>Proximity &mdash;
     <!-- Replace this comment with the team member name responsible for proximity -->
+       Person proximity name
    </h3>
-   <img src="" alt="Screen shot illustrating proximity in use">
+   <img src="/imgs/prox.jpg" alt="Screen shot illustrating proximity in use">
    <p>
-    <!-- Replace this comment with the copy (text) explaining how proximity is being used in the image. -->
+       With this screenshot of the site, we see that when the user presses SPORT, the dropdown list of many sports comes to view. This is an example of good proximity because it allows the user easily find their sport, and they don’t have to search all over the place for what they are looking for. All the sports are placed closely together. A bad example of proximity is if the site threw all different sports throughout the site with no grouping.
+
    </p>
 
    <h3>Alignment &mdash;
     <!-- Replace this comment with the team member name responsible for alignment -->
    </h3>
-   <img src="" alt="Screen shot illustrating alignment in use">
+   <img src="/imgs/align.PNG" alt="Screen shot illustrating alignment in use">
    <p>
-    <!-- Replace this comment with the copy (text) explaining how alignment is being used in the image. -->
+       The alignment illustrated on the page makes it easy to navigate and everything feels neat and organized. Your eyes are drawn to particular parts of the page and it is all in place. The drop down menus aligned at the top of the page make it easy to change the items shown on the page. The navigation bar always stays at the top of the page makes it easy to access other parts of the website. The size and length of the bar make it convenient and not too big and annoying. All the items on the page are aligned the same way and this pattern makes it very user friendly.
+
    </p>
 
    <h3>Repetition &mdash;
@@ -65,50 +68,55 @@ Each design principle needs three items:
    <h3>Contrast &mdash;
     <!-- Replace this comment with the team member name responsible for contrast -->
    </h3>
-   <img src="" alt="Screen shot illustrating contrast in use">
+      <img src="/imgs/con1.PNG" alt="Screen shot illustrating contrast in use"> <img src="/imgs/con2.jpeg">
+
    <p>
-    <!-- Replace this comment with the copy (text) explaining how contrast is being used in the image. -->
+       Adidas does a very good job of having contrasting colors on their mobile website. The majority of the website is black and white with a little bit of some gray thrown in. The black and white contrasting colors makes everything very easy to read and to focus on. The slight bit of gray helps to contrast between different selections or menus you can choose from. When you scroll to the bottom of the page they use a very bright blue to bring your attention to an email box. Using very simple, contrasting colors they are keeping our attention on their products and we are not distracted by anything else. They also use contrasting alignments. These different alignments make the buttons easier to read and also more interesting because then the whole page isn’t just left aligned.
+
    </p>
 
    <h3>Typography &mdash;
+       Samuel Cline
     <!-- Replace this comment with the team member name responsible for typography -->
    </h3>
-   <img src="" alt="Screen shot illustrating typography in use">
+   <img src="/imgs/type1.PNG" alt="Screen shot illustrating typography in use">
+   <img src="/imgs/type2.PNG">
    <p>
-    <!-- Replace this comment with the copy (text) explaining how typography is being used in the image. -->
+       Adidas has an excellent contrasting theme. They use a Sans serif font throughout their site, changing the weight and color of the text. They use the most extreme contrast of black and white, using a heavier weight in section headings. Headings and footers are center aligned. Other content such as navigation and product information are left aligned. The text is clear, professional, and easy to read, while still adding style to advertise the product. They use different formats and weights of the font to help guide the user where they want to go.
+
    </p>
 
    <h2>Site Purpose Statement</h2>
    <p>
-    <!-- Replace this comment with the copy (text) of the site purpose statement (remember elevator pitch length) and is spelling and grammar error free. -->
+       The purpose of this website is to sell Adidas products. Customers can also design and customize their own product. This website also has a store locator and a way to the customers to track their packages. This website is trying to keep shopping at Adidas easy so people will continue to buy their products.
    </p>
 
    <h2>Target Audience</h2>
    <ul>
-   <li>Age: <!-- List the age range here  --></li>
-    <li>Occupation: <!-- List the audience occupations or interests here  --></li>
-    <li>Income: <!-- List the income range here  --></li>
+   <li>Age: 16-30 <!-- List the age range here  --></li>
+    <li>Occupation: Student, Athelte <!-- List the audience occupations or interests here  --></li>
+    <li>Income: <$10,000/yr. <!-- List the income range here  --></li>
     <li>Other: <!-- List any other descriptions of the audience here  --></li>
    </ul>
 
    <h2>Persona</h2>
    <ul>
-    <li>Name: <!-- List the persona name here  --></li>
-    <li><img src="" alt=""><!-- Provide a picture path and alt value of the persona within the img element --></li>
-    <li>Occupation: <!-- List the persona occupation or interests here  --></li>
-    <li>Primary Device: <!-- List the persona's primary device used to access the web site here  --></li>
-    <li>Quote: <!-- List the persona's quote related to the content or reason for visiting the web site here  --></li>
+    <li>Name: Mike Smith <!-- List the persona name here  --></li>
+    <img src="/imgs/person.jpg" alt="Persona photo"><!-- Provide a picture path and alt value of the persona within the img element -->
+    <li>Occupation: College student <!-- List the persona occupation or interests here  --></li>
+    <li>Primary Device: iPhone 7, MacBook Air <!-- List the persona's primary device used to access the web site here  --></li>
+    <li>Quote: "It fits my style and my performace" <!-- List the persona's quote related to the content or reason for visiting the web site here  --></li>
    </ul>
   </main>
   <footer>
    <ul>
-    <li>&copy;2016</li>
-    <li>
+    &copy;2017 Samuel Cline, and accociates.
+
      <!--Add your name here, replacing this comment-->
-    </li>
-    <li>Last Updated:
+
+       <Div> Last Updated:9/30/2017</Div>
      <!-- Put today's date following the colon -->
-    </li>
+
    </ul>
    <p> </p>
   </footer>
