--- a/html/design.html
+++ b/html/design.html
@@ -40,7 +40,7 @@ Each design principle needs three items:
 
    <h3>Proximity &mdash;
     <!-- Replace this comment with the team member name responsible for proximity -->
-       Person proximity name
+       Cameron Carlsen
    </h3>
    <img src="/imgs/prox.jpg" alt="Screen shot illustrating proximity in use">
    <p>
@@ -49,6 +49,7 @@ Each design principle needs three items:
    </p>
 
    <h3>Alignment &mdash;
+       Ethan Nash
     <!-- Replace this comment with the team member name responsible for alignment -->
    </h3>
    <img src="/imgs/align.PNG" alt="Screen shot illustrating alignment in use">
@@ -58,6 +59,7 @@ Each design principle needs three items:
    </p>
 
    <h3>Repetition &mdash;
+       Sara Reaman
     <!-- Replace this comment with the team member name responsible for repetition -->
    </h3>
    <img src="" alt="Screen shot illustrating repetition in use">
@@ -66,6 +68,7 @@ Each design principle needs three items:
    </p>
 
    <h3>Contrast &mdash;
+       Marci Price
     <!-- Replace this comment with the team member name responsible for contrast -->
    </h3>
       <img src="/imgs/con1.PNG" alt="Screen shot illustrating contrast in use"> <img src="/imgs/con2.jpeg">
