--- a/html/design.html
+++ b/html/design.html
@@ -24,7 +24,7 @@
                  <a href = "/html/design.html">Design</a>
              </li>
 
-             </li>
+
          </ul>
      </nav>
   <main>
@@ -62,7 +62,7 @@ Each design principle needs three items:
        Sara Reaman
     <!-- Replace this comment with the team member name responsible for repetition -->
    </h3>
-   <img src="" alt="Screen shot illustrating repetition in use">
+
    <p>
     <!-- Replace this comment with the copy (text) explaining how repetition is being used in the image. -->
    </p>
@@ -71,7 +71,8 @@ Each design principle needs three items:
        Marci Price
     <!-- Replace this comment with the team member name responsible for contrast -->
    </h3>
-      <img src="/imgs/con1.PNG" alt="Screen shot illustrating contrast in use"> <img src="/imgs/con2.jpeg">
+      <img src="/imgs/con1.PNG" alt="Screen shot illustrating contrast in use">
+      <img src="/imgs/con2.jpeg" alt="image" >
 
    <p>
        Adidas does a very good job of having contrasting colors on their mobile website. The majority of the website is black and white with a little bit of some gray thrown in. The black and white contrasting colors makes everything very easy to read and to focus on. The slight bit of gray helps to contrast between different selections or menus you can choose from. When you scroll to the bottom of the page they use a very bright blue to bring your attention to an email box. Using very simple, contrasting colors they are keeping our attention on their products and we are not distracted by anything else. They also use contrasting alignments. These different alignments make the buttons easier to read and also more interesting because then the whole page isn’t just left aligned.
@@ -98,7 +99,7 @@ Each design principle needs three items:
    <ul>
    <li>Age: 16-30 <!-- List the age range here  --></li>
     <li>Occupation: Student, Athelte <!-- List the audience occupations or interests here  --></li>
-    <li>Income: <$10,000/yr. <!-- List the income range here  --></li>
+       <li>Income: <&lt;10,000/yr. <!-- List the income range here  --></li>
     <li>Other: <!-- List any other descriptions of the audience here  --></li>
    </ul>
 
