--- a/html/design.html
+++ b/html/design.html
@@ -84,7 +84,7 @@ Each design principle needs three items:
     <!-- Replace this comment with the team member name responsible for typography -->
    </h3>
    <img src="/imgs/type1.PNG" alt="Screen shot illustrating typography in use">
-   <img src="/imgs/type2.PNG">
+   <img src="/imgs/type2.PNG" alt="image">
    <p>
        Adidas has an excellent contrasting theme. They use a Sans serif font throughout their site, changing the weight and color of the text. They use the most extreme contrast of black and white, using a heavier weight in section headings. Headings and footers are center aligned. Other content such as navigation and product information are left aligned. The text is clear, professional, and easy to read, while still adding style to advertise the product. They use different formats and weights of the font to help guide the user where they want to go.
 
@@ -106,15 +106,16 @@ Each design principle needs three items:
    <h2>Persona</h2>
    <ul>
     <li>Name: Mike Smith <!-- List the persona name here  --></li>
-    <img src="/imgs/person.jpg" alt="Persona photo"><!-- Provide a picture path and alt value of the persona within the img element -->
+       <li><img src="/imgs/person.jpg" alt="Persona photo"></li><!-- Provide a picture path and alt value of the persona within the img element -->
     <li>Occupation: College student <!-- List the persona occupation or interests here  --></li>
     <li>Primary Device: iPhone 7, MacBook Air <!-- List the persona's primary device used to access the web site here  --></li>
     <li>Quote: "It fits my style and my performace" <!-- List the persona's quote related to the content or reason for visiting the web site here  --></li>
    </ul>
   </main>
   <footer>
-   <ul>
+
     &copy;2017 Samuel Cline, and accociates.
+      <ul>
 
      <!--Add your name here, replacing this comment-->
 
