--- a/html/design.html
+++ b/html/design.html
@@ -99,7 +99,7 @@ Each design principle needs three items:
    <ul>
    <li>Age: 16-30 <!-- List the age range here  --></li>
     <li>Occupation: Student, Athelte <!-- List the audience occupations or interests here  --></li>
-       <li>Income: <&lt;10,000/yr. <!-- List the income range here  --></li>
+       <li>Income: &lt;$10,000/yr. <!-- List the income range here  --></li>
     <li>Other: <!-- List any other descriptions of the audience here  --></li>
    </ul>
 
@@ -119,7 +119,7 @@ Each design principle needs three items:
 
      <!--Add your name here, replacing this comment-->
 
-       <Div> Last Updated:9/30/2017</Div>
+       Last Updated:9/30/2017
      <!-- Put today's date following the colon -->
 
    </ul>
