--- a/html/design.html
+++ b/html/design.html
@@ -119,7 +119,7 @@ Each design principle needs three items:
 
      <!--Add your name here, replacing this comment-->
 
-       Last Updated:9/30/2017
+          <li>Last Updated:9/30/2017</li>
      <!-- Put today's date following the colon -->
 
    </ul>
