--- a/html/design.html
+++ b/html/design.html
@@ -64,7 +64,7 @@ Each design principle needs three items:
    </h3>
 
    <p>
-    <!-- Replace this comment with the copy (text) explaining how repetition is being used in the image. -->
+       On the Adidas website, there are a lot of examples of repetition. There’s repetition in the shoe displays. They use the pictures as a grid type display to keep it the same. There’s also repetition in the way they use the menu bar and the lists of the products they sell. They use repetition as a way to keep things in order and structured.
    </p>
 
    <h3>Contrast &mdash;
