--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <ul>
         <li>
             <a href = "/index.html">Home</a>
-            <li>
+            <a href = "/weather/weatherplan.html">WeatherPlan</a>
             <a href = "/html/design.html">Design</a>
-            </li>
+
 
         </li>
     </ul>
