--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <head>
 <!--    the head holds information about the website-->
-    <meta charset=:"utf-8">
+    <meta charset="utf-8">
     <title>Samuel Cline | CIT230</title>
 
 </head>
@@ -15,7 +15,7 @@
 <!--The body holds the main content of a page-->
 <div id="wrapper">
     <header>
-        <img src="imgs/icon1.png">
+        <img src="imgs/icon1.png" alt="icon">
 
 <!--             identifies's our Site-->
 
