--- a/weather/weatherplan.html
+++ b/weather/weatherplan.html
@@ -24,7 +24,7 @@
 <p><span>College students move around quite a bit so one goal would be to quickly get the weather conditions for their current location as they head off to class or study. They are also often far from their homes so the ability to quickly get the conditions for a specific location is important as well. The third goal deals with planning for travels...the ability to get weather conditions for any location will help with last minute packing for road trips.</span></p>
 <h2><span>Persona</span></h2>
 <p><span><br/> </span></p>
-    <img src="Imgs/cool-joe.jpg">
+    <img src="Imgs/cool-joe.jpg" alt="joe-cool">
 <ul>
     <li><strong>Name</strong>: Joe Cool</li>
     <li><strong>Occupation</strong>: student</li>
@@ -47,29 +47,29 @@
 <h3><span>Branding</span></h3>
 <p>The client provided the following initial concept for a name and logo:</p>
 <p><strong><em><span>Weather Site </span></em></strong>The name should be bold &amp; italic</p>
-<img src="/weather/Imgs/logo.jpeg">
+<img src="/weather/Imgs/logo.jpeg" alt="logo">
 <p><span>☔</span><span>This logo can also be rendered using a HTML entity - &amp;#9748;</span></p>
 <h3><span>Typography </span></h3>
 <p><br /> <strong>Heading Font</strong>: <a href="https://fonts.google.com/specimen/Sansita"><span>Sansita</span></a> From Google Fonts</p>
-    <img src="/weather/Imgs/sanita-alphabet.jpg">
+    <img src="/weather/Imgs/sanita-alphabet.jpg" alt="sanita-aplpha">
 <p><strong></strong></p>
 <p><strong></strong></p>
 <p><strong>Body Copy Font</strong>: Helvetica</p>
-    <img src="/weather/Imgs/helvetica-alphabet.png">
+    <img src="/weather/Imgs/helvetica-alphabet.png" alt="helvetica-alpha">
 <p><span></span></p>
 <h3><span>Colors</span></h3>
-    <img src="/weather/Imgs/color-swatches.jpeg">
+    <img src="/weather/Imgs/color-swatches.jpeg" alt="colors">
 <h3><span>Elements</span></h3>
 <p>(add title attribute to each anchor)</p>
 <h3><span>Navigation:</span></h3>
-    <img src="/weather/Imgs/template-nav.jpeg">
+    <img src="/weather/Imgs/template-nav.jpeg" alt="navtemp">
 <p><u>Link:normal</u> : #FFF</p>
 <p><u>Link:visited : #D8F</u></p>
 <p><u>Link:hover, Link:focus : #0E89D5</u></p>
 <p><u>Link:active : default (omit from styles)</u></p>
 <p></p>
 <h3><span>Opaque rounded content box:</span></h3>
-    <img src="/weather/Imgs/content-box.jpeg">
+    <img src="/weather/Imgs/content-box.jpeg" alt="contentbox">
 <p> background-color: rgba(200,200,200,.6);</p>
 <p> margin: .2em auto;</p>
 <p> border: 1px solid;</p>
@@ -79,11 +79,11 @@
 <h3><span>Wireframes</span></h3>
 <p></p>
 <h3><span>Small screen</span></h3>
-    <img src="/weather/Imgs/small-wireframe.jpeg">
+    <img src="/weather/Imgs/small-wireframe.jpeg" alt="mobilewireframe">
 <p></p>
 <p></p>
 <p><span><br/> </span></p>
 <p><strong><span></span></strong></p>
 <h3><span>Large Screen</span></h3>
-    <img src="/weather/Imgs/large-wireframe.jpeg">
+    <img src="/weather/Imgs/large-wireframe.jpeg" alt="largewireframe">
 </body>
