fixed charset on plan

--- a/weather/weatherplan.html
+++ b/weather/weatherplan.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
         <!--    the head holds information about the website-->
-        <meta charset=:"utf-8">
+        <meta charset="utf-8">
         <style>
             @import url('https://fonts.googleapis.com/css?family=Sansita');
             h1,h2,h3,h4{font-family: 'Sansita', sans-serif;
