added nave to plan

--- a/weather/weatherplan.html
+++ b/weather/weatherplan.html
@@ -15,7 +15,17 @@
 
 </head>
 <body>
+<header>
 <h1><span>Weather Site Plan</span></h1>
+</header>
+    <nav>
+        <ul>
+        <li><a href = "/index.html">Home</a></li>
+        <li><a href = "/weather/weatherplan.html">WeatherPlan</a></li>
+        <li><a href = "/html/design.html">Design</a></li>
+        </ul>
+    </nav>
+<main>
 <h2><span>Purpose</span></h2>
 <p><span>The purpose of the <strong><em>Weather Site</em></strong> is to give current weather conditions in 3 different ways. The initial page will give the weather for the current location based on the Geocoding location information from the device. The second is weather for 3 specific locations accessible through a dedicated link, and the third is weather for any location determined by a search string.</span></p>
 <h2><span>Audience</span></h2>
@@ -86,4 +96,9 @@
 <p><strong><span></span></strong></p>
 <h3><span>Large Screen</span></h3>
     <img src="/weather/Imgs/large-wireframe.jpeg" alt="largewireframe">
+</main>
+    <footer>
+        &copy;2017 Samuel Cline
+    </footer>
 </body>
+</html>
