--- a/weather/franklinweather.html
+++ b/weather/franklinweather.html
@@ -1,19 +1,71 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <!--    the head holds information about the website-->
-        <meta charset="UTF-8">
-        <title>Franklin, ID | Weather </title>
-        <meta name="description" content="Short Description of the page.">
-        <meta name="viewport" content="width=device-width">
-        <style>
-            @import url('https://fonts.googleapis.com/css?family=Sansita');
-            h1,h2,h3,h4{font-family: 'Sansita', sans-serif;
-            }
-            body{font-family: 'Helvetica' , sans-serif;
+    <!--    the head holds information about the website-->
+    <meta charset="UTF-8">
+    <title>Franklin, ID | Weather </title>
+    <meta name="description" content="Short Description of the page.">
+    <meta name="viewport" content="width=device-width">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Sansita');
+        h1,
+        h2,
+        h3,
+        h4 {
+            font-family: 'Sansita', sans-serif;
+        }
 
-            }
-        </style>
+        body {
+            font-family: 'Helvetica', sans-serif;
+        }
+    </style>
 
 
-    </head>
+</head>
+
+<body>
+    <header>
+        <h1>&#9748Weather Site</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="/index.html" title="Go to home page">Home</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h2>Franklin,ID</h2>
+        <article>
+            <section>
+                <h3>Current Conditions</h3>
+                <h4>wind:</h4>
+                <p>Southwest @ 1-5MPH</p>
+                <h4>precipitation:</h4>
+                <p>0</p>
+                <h4>Summary:</h4>
+                <p>&#9728Sunny</p>
+            </section>
+            <section>
+                <h3>Current Temp</h3>
+                <p>16F</p>
+                <h4>Today's High and Low</h4>
+                <p>90F/66F</p>
+            </section>
+            <section>
+                <h3>Hourly Forcast</h3>
+                <ul>
+                   <li><h4>7am</h4>
+                       <p>0F</p></li>
+                    <li><h4>8am</h4>
+                        <p>0F</p></li>
+                    <li><h4>9am</h4>
+                    <p>0F</p></li>
+                </ul>
+            </section>
+        </article>
+
+    </main>
+    <footer>
+        &copy;2017 Samuel Cline
+    </footer>
+</body>
+</html>
