added home link

--- a/index.html
+++ b/index.html
@@ -6,44 +6,46 @@
 
 
 <head>
-<!--    the head holds information about the website-->
+    <!--    the head holds information about the website-->
     <meta charset="utf-8">
     <title>Samuel Cline | CIT230</title>
 
 </head>
+
 <body>
-<!--The body holds the main content of a page-->
-<div id="wrapper">
-    <header>
-        <img src="imgs/icon1.png" alt="icon">
+    <!--The body holds the main content of a page-->
+    <div id="wrapper">
+        <header>
+            <img src="imgs/icon1.png" alt="icon">
 
-<!--             identifies's our Site-->
+            <!--             identifies's our Site-->
 
-        <div id="brand"> Samuel Cline | CIT230 | SamuelLCline.GitHub.io </div>
-    </header>
+            <div id="brand"> Samuel Cline | CIT230 | SamuelLCline.GitHub.io </div>
+        </header>
 
-<!--<div>test</div>-->
+        <!--<div>test</div>-->
 
-    <nav>
-    <ul>
-        <li>
-            <a href = "/index.html">Home</a>
-            <a href = "/weather/weatherplan.html">WeatherPlan</a>
-            <a href = "/html/design.html">Design</a>
+        <nav>
+            <ul>
+
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/weather/weatherplan.html">WeatherPlan</a></li>
+                <li><a href="/html/design.html">Design</a></li>
+                <li><a href="/weather/franklinweather.html">Franklin</a></li>
 
 
-        </li>
-    </ul>
-    </nav>
-    <main>
-    <h1>
-    Samuel Cline
-    </h1>
-    </main>
 
-    <footer>
-        &copy; 2017 Samuel Cline
-    </footer>
+            </ul>
+        </nav>
+        <main>
+            <h1>
+                Samuel Cline
+            </h1>
+        </main>
+
+        <footer>
+            &copy; 2017 Samuel Cline
+        </footer>
 
     </div>
 
