--- a/weather/franklinweather.html
+++ b/weather/franklinweather.html
@@ -25,7 +25,7 @@
 
 <body>
     <header>
-        <h1>&#9748Weather Site</h1>
+        <h1>&#9748:Weather Site</h1>
     </header>
     <nav>
         <ul>
@@ -42,7 +42,7 @@
                 <h4>precipitation:</h4>
                 <p>0</p>
                 <h4>Summary:</h4>
-                <p>&#9728Sunny</p>
+                <p>&#9728:Sunny</p>
             </section>
             <section>
                 <h3>Current Temp</h3>
