removed <h2> as child

--- a/weather/weatherplan.html
+++ b/weather/weatherplan.html
@@ -70,7 +70,7 @@
         </ol>
 
         <article>
-            <span><h2>Styles</h2></span>
+            <h2><span>Styles</span></h2>
             <section>
                 <h3><span>Branding</span></h3>
                 <p>The client provided the following initial concept for a name and logo:</p>
