added lesson 5 franklin with css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!--    the head holds information about the website-->
     <meta charset="utf-8">
     <title>Samuel Cline | CIT230</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
 </head>
 
@@ -31,7 +32,7 @@
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/weather/weatherplan.html">WeatherPlan</a></li>
                 <li><a href="/html/design.html">Design</a></li>
-                <li><a href="/weather/franklinweather.html">Franklin</a></li>
+                <li><a href="/lesson-5/franklin-5.html">Franklin</a></li>
 
 
 
