added .js file and updated css to be more accurate

--- a/lesson-5/franklin-5.html
+++ b/lesson-5/franklin-5.html
@@ -102,7 +102,7 @@
             <article class="article">
                 <h3>Franklin Breaks Record</h3>
                 <p class="town-article">
-                    <img class="artimage" src="/lesson-5/imgs/paper1.png" alt="paper"> This article template features a large eye-catching title section with space for multiple authors and affiliations per author. The article has a traditional two column layout to make content easy to read.
+                    <img class="artimage" src="/lesson-5/imgs/paper1.png" alt="paper"> Franklin Breaks Record high temperature.
                 </p>
             </article>
         </section>
@@ -113,11 +113,11 @@
         <aside>
             Contact Email: 123@gmail.com
         </aside>
-        <p class="footer-bar">&copy;2017 All Rights Reserved | Franklin Weather | <span id="currentdate">Current Date Placeholder</span></p>
+        <p class="footer-bar">&copy;2017 All Rights Reserved | Franklin Weather | <span id="date"></span></p>
     </footer>
 
     <script src="scripts/hamburger.js"></script>
-    <script src="scripts/currentdate.js"></script>
+    <script src="/lesson-5/js/time.js"></script>
 
 </body>
 
