Fixed CSS issues and added flex box features

--- a/lesson-5/franklin-5.html
+++ b/lesson-5/franklin-5.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-
+    <div class="top">
     <header>
         <img src="/lesson-5/imgs/logo.jpeg" alt="The site logo">
         <h1>Franklin Weather Page</h1>
@@ -40,6 +40,7 @@
             <li><a href="#">Gallery</a></li>
         </ul>
     </nav>
+    </div>
 
     <main>
         <h2 class="city">The City of Franklin</h2>
