--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/weather/weatherplan.html">WeatherPlan</a></li>
                 <li><a href="/html/design.html">Design</a></li>
-                <li><a href="/lesson-5/franklin-5.html">Franklin</a></li>
+                <li><a href="/lesson-5/franklin-5.html">Franklin-Lesson-5</a>
+                <li><a href="/lesson-6/franklin-6.html">Franklin-Lesson-6</a>
+                </li>
 
 
 
