added responsive image and date

--- a/lesson-6/franklin-6.html
+++ b/lesson-6/franklin-6.html
@@ -44,10 +44,20 @@
 
     <main>
         <h2 class="city">The City of Franklin</h2>
-        <figure>
+<!--        <figure>-->
 
-        </figure>
         <section class="content">
+<!--            <picture class="background">-->
+            <figure class="background">
+
+
+
+                <img src="/lesson-6/imgs/broke.jpg" alt="Nothing" sizes="50vw" srcset="/lesson-6/imgs/s.jpg 400w,
+                                                                                      /lesson-6/imgs/m.jpg 800w,
+                                                                                      /lesson-6/imgs/l.jpg 1000w" >
+
+            </figure>
+<!--            </picture>-->
             <section class="summary1">
                 <h3>Weather Summary</h3>
                 <div class="highlow">
