--- a/tpc.html
+++ b/tpc.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
+
 <head>
     <link href="/css/normalize.css" rel="stylesheet">
     <!-- normalize useragent/browser defaults -->
@@ -26,33 +27,36 @@
     </header>
 
     <h2>Custom Built Machines</h2>
+
+
     <section class="content">
         <section class="pc">
-    <h3>Custom PC's</h3>
-
-        <div>
-            <span>Machines Custom Built to YOUR specifications.</span>
-            <ul>
-                <li>Buisiness Machines</li>
-                <li>Gaming Machines</li>
-                <li>MacOS Compatible Systems</li>
-                <li>Design Systems</li>
-                <li>Media Servers</li>
-            </ul>
-
-        </div>
+            <h3>MacOS Compatible systems</h3>
+            <div>
+                <br>
+                <span><h4>Machines Custom Built to YOUR specifications.</h4></span>
+<!--                <div class="fadeln"></div>-->
+                <ul>
+                    <li>Buisiness Machines</li>
+                    <li>Gaming Machines</li>
+                    <li>MacOS Compatible Systems</li>
+                    <li>Design Systems</li>
+                    <li>Media Servers</li>
+                </ul>
+            </div>
         </section>
-    <section class="mac">
-        <h3>MacOS Compatible systems</h3>
-        <div>
-            <span>Why build a custom Mac?</span>
-            <ul>
-            <li>MacOS systems are engineered and built to provide optimal compatability with Apple MacOS. These systems are built for you and are ready for YOU to install MacOS.</li>
-            <li>You use your own copy of MacOS to get your system up and running, all the tools you need are provided.</li>
-                <li>Get the power of a Mac, Without the cost</li>
-            </ul>
-        </div>
-    </section>
+        <section class="mac">
+            <h3>MacOS Compatible systems</h3>
+            <div>
+                <br>
+                <span><h4>Why build a custom Mac?</h4></span>
+                <ul>
+                    <li>MacOS systems are engineered and built to provide optimal compatability with Apple MacOS. These systems are built for you and are ready for YOU to install MacOS.</li>
+                    <li>You use your own copy of MacOS to get your system up and running, all the tools you need are provided.</li>
+                    <li>Get the power of a Mac, Without the cost</li>
+                </ul>
+            </div>
+        </section>
 
 
 
@@ -60,5 +64,6 @@
 
     </section>
 </body>
+
 </html>
 <link rel="stylesheet" href="">
