--- a/lesson-7/franklin-7.html
+++ b/lesson-7/franklin-7.html
@@ -12,11 +12,11 @@
     <!-- Google API font reference -->
     <link href="css/normalize.css" rel="stylesheet">
     <!-- normalize useragent/browser defaults -->
-    <link href="css/main-6.css" rel="stylesheet">
+    <link href="css/main-7.css" rel="stylesheet">
     <!-- default styles - small/phone views -->
-    <link href="css/medium-6.css" rel="stylesheet">
+    <link href="css/medium-7.css" rel="stylesheet">
     <!-- medium/tablet views -->
-    <link href="css/large-6.css" rel="stylesheet">
+    <link href="css/large-7.css" rel="stylesheet">
     <!-- large/wide/desktop views -->
 
 </head>
@@ -38,7 +38,7 @@
                 <li><a href="#">Greenville</a></li>
                 <li><a href="#">Springfield</a></li>
                 <li><a href="#">Storm Center</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="/lesson-7/gallery.html">Gallery</a></li>
             </ul>
         </nav>
     </div>
@@ -53,7 +53,6 @@
 
 
 
-                <img src="/lesson-6/imgs/broke.jpg" alt="Nothing" sizes="50vw" srcset="/lesson-6/imgs/s.jpg 400w, /lesson-6/imgs/m.jpg 800w, /lesson-6/imgs/l.jpg 1000w" >
 
             </figure>
 <!--            </picture>-->
