--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                 <li><a href="/lesson-7/franklin-7.html">Franklin-Lesson-7</a>
                 <li><a href="/lesson-8/franklin-8.html">Franklin-Lesson-8</a>
                 </li>
+                <li><a href="/lesson-9/tablebuild.html">Lesson-9 Table</a>
+                </li>
                 <li><a href="/tpc.html">TorquedPC/Flexbox TESTING</a>
                 </li>
 
