--- a/lesson-9/franklin-9.html
+++ b/lesson-9/franklin-9.html
@@ -44,9 +44,13 @@
             </section>
 
             <section class="forecast">
-                <h3>10 Day Forecast</h3>
+
+
                 <table class="table">
                     <thead>
+                        <tr>
+                            <th class="tablehead" colspan="10"><h3>10 Day Forecast</h3></th>
+                        </tr>
                         <tr class="days">
                             <th>Day 1</th>
                             <th>Day 2</th>
