Added Improved Thank you Screen

--- a/lesson-9/storm/thanks.html
+++ b/lesson-9/storm/thanks.html
@@ -1,1 +1,20 @@
-THANKS!
+<!DOCTYPE HTML>
+<html lang="en">
+    <head>
+        <!--    the head holds information about the website-->
+        <meta charset="utf-8">
+
+        <link rel="stylesheet" href="/lesson-9/storm/css/fire.css">
+        <script src="/lesson-9/storm/js/fire.js"></script>
+<!--        <canvas id="canvas2"></canvas>-->
+        <canvas id="canvas">Canvas is not supported in your browser.</canvas>
+    </head>
+
+
+
+    <body>
+<!--        <canvas id="canvas">Canvas is not supported in your browser.</canvas>-->
+
+    </body>
+    <script src="/lesson-9/storm/js/fire.js"></script>
+    <script src="/lesson-9/storm/js/thanks1.js"></script>
