--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                 </li>
                 <li><a href="/lesson-9/franklin-9.html">Lesson-9</a>
                 </li>
+                <li><a href="/lesson-10/franklin-9.html">Lesson-9</a>
+                </li>
                 <li><a href="/tpc.html">TorquedPC/Flexbox TESTING</a>
                 </li>
 
