--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </li>
                 <li><a href="/lesson-9/franklin-9.html">Lesson-9</a>
                 </li>
-                <li><a href="/lesson-10/franklin-9.html">Lesson-9</a>
+                <li><a href="/lesson-10/franklin.html">Lesson-10</a>
                 </li>
                 <li><a href="/tpc.html">TorquedPC/Flexbox TESTING</a>
                 </li>
