--- a/lesson-10/modules/head.html
+++ b/lesson-10/modules/head.html
@@ -9,9 +9,9 @@
 <!-- Google API font reference -->
 <link href="css/normalize.css" rel="stylesheet">
 <!-- normalize useragent/browser defaults -->
-<link href="css/main-9.css" rel="stylesheet">
+<link href="css/main.css" rel="stylesheet">
 <!-- default styles - small/phone views -->
-<link href="css/medium-9.css" rel="stylesheet">
+<link href="css/medium.css" rel="stylesheet">
 <!-- medium/tablet views -->
-<link href="css/large-9.css" rel="stylesheet">
+<link href="css/large.css" rel="stylesheet">
 <!-- large/wide/desktop views -->
