fixed gallery references

--- a/lesson-10/gallery.html
+++ b/lesson-10/gallery.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html lang="en-us">
 
-    <head w3-include-html="/lesson-8/modules/headg.html">
+    <head w3-include-html="/lesson-10/modules/headg.html">
 
     </head>
 
 <body>
     <div class="top">
-        <header w3-include-html="/lesson-8/modules/header.html">
+        <header w3-include-html="/lesson-10/modules/header.html">
 
         </header>
 
         <!-- site navigation use placeholder references -->
-        <nav w3-include-html="/lesson-8/modules/nav.html">
+        <nav w3-include-html="/lesson-10/modules/nav.html">
 
         </nav>
     </div>
@@ -53,10 +53,10 @@
     <footer w3-include-html="/lesson-8/modules/footer.html">
 
     </footer>
-    <script src="/lesson-8/js/w3.js"></script>
-    <script src="/lesson-8/js/time.js"></script>
-    <script src="/lesson-8/js/modularize.js"></script>
-    <script src="/lesson-8/js/nav.js"></script>
+    <script src="/lesson-10/js/w3.js"></script>
+    <script src="/lesson-10/js/time.js"></script>
+    <script src="/lesson-10/js/modularize.js"></script>
+    <script src="/lesson-10/js/nav.js"></script>
 
 
 </body>
