--- a/lesson-10/modules/headg.html
+++ b/lesson-10/modules/headg.html
@@ -9,9 +9,9 @@
 <!-- Google API font reference -->
 <link href="css/normalize.css" rel="stylesheet">
 <!-- normalize useragent/browser defaults -->
-<link href="css/main-9g.css" rel="stylesheet">
+<link href="css/maing.css" rel="stylesheet">
 <!-- default styles - small/phone views -->
-<link href="css/medium-9g.css" rel="stylesheet">
+<link href="css/mediumg.css" rel="stylesheet">
 <!-- medium/tablet views -->
-<link href="css/large-9g.css" rel="stylesheet">
+<link href="css/largeg.css" rel="stylesheet">
 <!-- large/wide/desktop views -->
