fixed head references

--- a/lesson-10/storm/storm.html
+++ b/lesson-10/storm/storm.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-us">
 
-    <head w3-include-html="/lesson-10/storm/modules/head.html">
+    <head w3-include-html="/lesson-10/modules/head.html">
         <link href="css/storm.css" rel="stylesheet">
         <link href="css/med.css" rel="stylesheet">
         <link href="css/large1.css" rel="stylesheet">
@@ -11,12 +11,12 @@
 
 <body>
     <div class="top">
-        <header w3-include-html="/lesson-10/storm/modules/header.html">
+        <header w3-include-html="/lesson-10/modules/header.html">
 
         </header>
 
         <!-- site navigation use placeholder references -->
-        <nav w3-include-html="/lesson-10/storm/modules/nav.html">
+        <nav w3-include-html="/lesson-10/modules/nav.html">
 
         </nav>
     </div>
@@ -87,7 +87,7 @@
 
     </main>
 
-    <footer w3-include-html="/lesson-10/storm/modules/footer.html">
+    <footer w3-include-html="/lesson-10/modules/footer.html">
 
     </footer>
     <script src="/lesson-10/js/w3.js"></script>
