--- a/lesson-10/modules/head.html
+++ b/lesson-10/modules/head.html
@@ -7,11 +7,11 @@
 <!-- external style references in the proper cascading order -->
 <link href="https://fonts.googleapis.com/css?family=#" rel="stylesheet">
 <!-- Google API font reference -->
-<link href="css/normalize.css" rel="stylesheet">
+<link href="/lesson-10/css/normalize.css" rel="stylesheet">
 <!-- normalize useragent/browser defaults -->
-<link href="css/main.css" rel="stylesheet">
+<link href="/lesson-10/css/main.css" rel="stylesheet">
 <!-- default styles - small/phone views -->
-<link href="css/medium.css" rel="stylesheet">
+<link href="/lesson-10/css/medium.css" rel="stylesheet">
 <!-- medium/tablet views -->
-<link href="css/large.css" rel="stylesheet">
+<link href="/lesson-10/css/large.css" rel="stylesheet">
 <!-- large/wide/desktop views -->
